[package]
name = "productivity-app-tauri"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Rust + Tauri desktop app with diary, todo, focus, and clock"
license = "MIT"

[dependencies]
tauri = { version = "2.9", features = ["tray-icon", "native-tls-vendored"] }
tauri-plugin-shell = "2.3"
tauri-plugin-notification = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
tokio = { version = "1.37", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.9", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.21"
directories = "5.0"
notify = "6.1"
winreg = "0.50"

[build-dependencies]
tauri-build = { version = "2.5", features = [] }
ico = "0.4"

[lib]
path = "src/lib.rs"

[[bin]]
name = "productivity-app"
path = "src/main.rs"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
